@@ -1,4 +1,4 @@
-GNU dbm NEWS -- history of user-visible changes. 2016-07-19
+GNU dbm NEWS -- history of user-visible changes. 2016-07-25
 Copyright (C) 1990-2016 Free Software Foundation, Inc.
 See the end of file for copying conditions.
 
@@ -105,10 +105,17 @@ that is not desirable.
 
 Copy meta-information (ownership and file permissions) from src to dst.
 
-* Line editing in gdbmtool
+** gdbmtool
+
+** Line editing in gdbmtool
 
 The gdbmtool utility now offers the usual line-editing facilities (if
 the package has been compiled with GNU Readline.
+
+** Keyboard shortcuts
+
+If the last entered command was "next", hitting the "Enter" key
+repeats it without arguments.
 
 * Magic file included
 
